feat: implement jwt
