# src/main/java/com/pragma/powerup/infrastructure/input/rest/AuthRestController.java
@@ -1,0 +1,25 @@
+package com.pragma.powerup.infrastructure.input.rest;
+
+import com.pragma.powerup.application.dto.request.LoginRequestDto;
+import com.pragma.powerup.application.dto.response.LoginResponseDto;
+import com.pragma.powerup.application.handler.IAuthHandler;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.MediaType;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/auth")
+@RequiredArgsConstructor
+public class AuthRestController {
+    private final IAuthHandler handler;
+
+    @PostMapping(value = "/login", consumes = MediaType.APPLICATION_JSON_VALUE,
+            produces = MediaType.APPLICATION_JSON_VALUE)
+    public DefaultResponse<LoginResponseDto> login(@Valid @RequestBody LoginRequestDto request) {
+        return new DefaultResponse<>(handler.login(request));
+    }
+}
